add loading screen

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,14 @@
   color: white;
 }
 
+.App-center {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .App-link {
   color: #61dafb;
 }
